# AuthLogin-Fastapi

./: .env  README.md  pyproject.toml
authlogin/: __init__.py  app.py
authlogin/public/: home.html  login.html  register.html
authlogin/src/: __init__.py
authlogin/src/handle/: users.py
authlogin/src/model/: users.py
authlogin/src/routes/: users.py
authlogin/src/schemas/: users.py
authlogin/static/: style.css
tests/: test_authlogin.py
